--- a/themes/vex-hugo/layouts/partials/header.html
+++ b/themes/vex-hugo/layouts/partials/header.html
@@ -2,18 +2,18 @@
 <header class="sticky-top bg-white">
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="{{ site.BaseURL | relLangURL }}">{{ if site.Params.logo }} <img src="{{ site.Params.logo | absURL }}" alt="{{ site.Title }}" {{with site.Params.logo_width}}width="{{.}}"{{end}}> {{ else }} {{ site.Title }} {{ end }} <p style="font-family'Josefin Sans',sans-serif;font-size:18px;font-weight:700;color:#3b4045;-webkit-font-smoothing:antialiased;padding-top: 2px;padding-left: 12px;">معدتي</p></a>
+      <a class="navbar-brand" style="position: relative;top: 14px;right: 19px;"  href="{{ site.BaseURL | relLangURL }}">{{ if site.Params.logo }} <img src="{{ site.Params.logo | absURL }}" alt="{{ site.Title }}" {{with site.Params.logo_width}}width="{{.}}" {{end}}> {{ else }} {{ site.Title }} {{ end }} <p style="font-family'Josefin Sans',sans-serif;font-size:18px;font-weight:700;color:#3b4045;-webkit-font-smoothing:antialiased;position: relative;bottom:40px;left: 90px;">معدتي</p></a>
       <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navigation"
         aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       
 
-      <div class="collapse navbar-collapse text-center" id="navigation">
+      <div class="collapse navbar-collapse text-center bg-white" id="navigation">
         <ul class="navbar-nav ml-auto" id="navbar-links">
           {{ range site.Menus.main }}
             {{ if .HasChildren }}
-              <li class="nav-item dropdown">
+              <li class="nav-item dropdown bg-white">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   {{ i18n (print "navbar_button_" .Name) }}
                 </a>
