--- a/themes/vex-hugo/layouts/contact/list.html
+++ b/themes/vex-hugo/layouts/contact/list.html
@@ -5,7 +5,7 @@
     <div class="row justify-content-center">
       {{ with .Params.office }}
       <div class="col-lg-5 col-sm-6 mb-5">
-        <h2 class="font-weight-bold mb-4">{{ .title | markdownify }}</h2>
+        <h2 style="text-align: right;" class="font-weight-bold mb-4">{{ .title | markdownify }}</h2>
         <p style="text-align: right;">{{ .content | markdownify }}</p>
         <ul class="list-unstyled contact-list">
           {{with .mobile}} <li class="mb-3" style="text-align: right;"><a href="tel:{{ . }}">
@@ -19,7 +19,7 @@
       {{ end }}
       <div class="col-lg-3 col-sm-6 mb-5">
         {{ with .Params.opennig_hour }}
-        <h2 class="font-weight-bold mb-4">{{ .title | markdownify }}</h2>
+        <h2 style="text-align: right;" class="font-weight-bold mb-4">{{ .title | markdownify }}</h2>
         <ul class="list-unstyled">
           {{ range .day_time }}
           <li class="mb-2"  style="text-align: right;">{{ . | markdownify }}</li>
@@ -30,7 +30,7 @@
     </div>
     <div class="row justify-content-center">
       <div class="col-lg-8">
-        <h2 class="font-weight-bold mb-4">{{ .Title | markdownify }}</h2>
+        <h2 class="font-weight-bold mb-4" style="text-align: right;">{{ .Title | markdownify }}</h2>
         <form action="{{ site.Params.contact_form_action }}" method="POST" class="row">
           <div class="col-lg-6 mb-3">
             <input type="text" class="form-control mb-2" id="name" name="name" placeholder="{{ i18n "Your Name" }}">
