--- a/themes/vex-hugo/layouts/partials/banner.html
+++ b/themes/vex-hugo/layouts/partials/banner.html
@@ -13,11 +13,14 @@
 				<div class="block">
 					<h1 class="font-weight-bold mb-4 font-size-60">{{ .title | markdownify }}</h1>
 					<p class="mb-4">{{ .content | markdownify }}</p>
-					{{ if .button.enable }}
-					{{ with .button }}
-					<a href="{{.link|absLangURL}}" class="btn btn-main">{{.label}}</a>
-					{{ end }}
-					{{ end }}
+
+					<div class="row1">
+					<a href="https://apps.apple.com/sa/app/%D9%85%D8%B9%D8%AF-%D8%AA%D9%8A/id6502878267">
+					  <img class="img-flj" src="images/downloadonapp2.png" alt="" style="max-width: 160px;"></a>
+					<a href="">
+					  <img class="img-flj2" src="images/donloadongoogle.webp" alt="" style="max-width: 170px;padding-left: 4%;"></a>
+				</div>
+				
 				</div>
 			</div>
 		</div><!-- .row close -->
