--- a/themes/vex-hugo/assets/scss/style.scss
+++ b/themes/vex-hugo/assets/scss/style.scss
@@ -175,6 +175,15 @@ a:active {
   }
 }
 
+
+.section{
+   .block {
+    @media(min-width:1000px){ 
+  text-align: right;
+  }
+ }
+}
+
 .mb-10 {
   margin-bottom: 10px;
 }
