--- a/themes/vex-hugo/layouts/partials/banner.html
+++ b/themes/vex-hugo/layouts/partials/banner.html
@@ -16,9 +16,9 @@
 
 					<div class="row1">
 					<a href="https://apps.apple.com/sa/app/%D9%85%D8%B9%D8%AF-%D8%AA%D9%8A/id6502878267">
-					  <img class="img-flj" src="images/downloadonapp2.png" alt="" style="max-width: 160px;"></a>
-					<a href="">
-					  <img class="img-flj2" src="images/donloadongoogle.webp" alt="" style="max-width: 170px;padding-left: 4%;"></a>
+					  <img class="img-flj" src="images/downloadonapp2.png" alt="" style="max-width: 145px;"></a>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSfk_yOaTX3AH-STCzl9EkTRZ0kIzkfYlsUm9EN02-KK-J2K0w/viewform?usp=sf_link">
+					  <img class="img-flj2" src="images/donloadongoogle.webp" alt="" style="max-width: 155px;padding-left: 4%;"></a>
 				</div>
 				
 				</div>
